# gdorker

./: .gitignore  README.md  g-dorker.py  gdorker.py  pyproject.toml  requirements.txt
gdorker/: script.py
tests/: test_dorker.py
